--- a/SlurpJob/Components/Pages/Dashboard.razor
+++ b/SlurpJob/Components/Pages/Dashboard.razor
@@ -37,7 +37,7 @@
 
              <div class="card bg-dark border-warning text-warning mb-3">
                  <div class="card-body">
-                     <h6 class="card-title">Recent Events (1m)</h6>
+                     <h6 class="card-title">Recent Events</h6>
                      <p class="card-text display-6">@MemoryStore.GetLiveFeed().Count()</p>
                  </div>
              </div>
