--- a/SlurpJob/Components/PayloadInspector.razor
+++ b/SlurpJob/Components/PayloadInspector.razor
@@ -13,11 +13,11 @@
                 <div class="modal-body font-monospace">
                     <div class="row">
                         <div class="col-md-6 border-end border-secondary">
-                            <h6 class="text-muted border-bottom border-secondary pb-2">Hex Dump</h6>
+                            <h6 class="text-light border-bottom border-secondary pb-2">Hex Dump</h6>
                             <pre class="text-info" style="white-space: pre-wrap;">@HexDump</pre>
                         </div>
                         <div class="col-md-6">
-                            <h6 class="text-muted border-bottom border-secondary pb-2">ASCII Representation</h6>
+                            <h6 class="text-light border-bottom border-secondary pb-2">ASCII Representation</h6>
                             <pre class="text-success" style="white-space: pre-wrap;">@AsciiDump</pre>
                         </div>
                     </div>
