--- a/SlurpJob/Components/App.razor
+++ b/SlurpJob/Components/App.razor
@@ -16,8 +16,11 @@
 <body>
     <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
     <script src="_framework/blazor.web.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="//unpkg.com/globe.gl"></script>
     <script src="js/globe.js"></script>
+    <script src="js/map2d.js"></script>
+    <script src="js/timeline.js"></script>
 </body>
 
 </html>
