--- a/SlurpJob/wwwroot/app.css
+++ b/SlurpJob/wwwroot/app.css
@@ -62,3 +62,36 @@ h1:focus {
 .form-floating>.form-control:focus::placeholder {
     text-align: start;
 }
+#globeViz {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+    background: #000;
+}
+
+.dashboard-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    pointer-events: none;
+}
+
+.dashboard-overlay > * {
+    pointer-events: auto;
+}
+
+#mapViz {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+    background: #050510;
+}
